	  arena (so new windows don't trigger a redraw). Also added missing
	  unref.
	* src/tidy/tidy-blur-group.c: Remove hd_dbus_display_is_off check, as
	  it is not needed and means we can't use the file outside of h-d.
	* src/util/hd-dbus.c: Don't use clutter_stage_set_shaped_mode to stop
	  redraw, as this unfortunately stops the window's actor being updated
	  and causes the above bug. Instead use actor_hide and allow_redraw.
	  Tested and does not regress 139928.

2009-10-06  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Deal with repeated, fast changes to menu files.
	Fixes: NB#141702

	* src/launcher/hd-app-mgr.c: Added debug function to dump list of known
	launcher items.
	* src/launcher/hd-app-mgr.h:
	* src/launcher/hd-launcher-tree.c: Repeat the walking every time libmenu
	notifies a change, and discard all walkings except the last one.
	* src/launcher/hd-launcher.c: If showing launcher when reloading the menus,
	go to home.

2009-10-06  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#139928 - Accessing the screen unlocking view reveals the
	underlying applications

	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler): Make a
	blocking redraw of the stage when the screen is lit again. This
	ensures we draw any new visible windows first.

2009-10-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#141642 [REGU]Applications are shown in portrait mode during call
		  rejections or missed calls

	Not specific to rotation, the unmap transition was skipped for all
	fullscreen dialogs if there was an application behind.  This is
	because fullscreen dialogs are in the home_blur group and when
	the dialog is unmapped and hdrm is restacked the dialog is hidden
	by the next client.

	* src/util/hd-transition.c (hd_transition_popup):
	  When playing the unmap transition for fullscreen dialogs move them
	  to the app_top container in order to prevent stacking and visibility
	  detecting interfering with us.
